fix: updates api documentation info
