# app/Http/Controllers/Controller.php
@@ -10,10 +10,10 @@ use Illuminate\Routing\Controller as BaseController;
 /**
      * @OA\Info(
      *      version="1.0.0",
-     *      title="Laravel OpenApi Demo Documentation",
-     *      description="L5 Swagger OpenApi description",
+     *      title="API Documentation",
+     *      description="Trez labs test",
      *      @OA\Contact(
-     *          email="admin@admin.com"
+     *          email="ronygcgarcia@gmail.com"
      *      ),
      *      @OA\License(
      *          name="Apache 2.0",
@@ -21,21 +21,12 @@ use Illuminate\Routing\Controller as BaseController;
      *      )
      * )
      * 
-     * @OA\Get(
-     *     path="/",
-     *     description="Home page",
-     *     @OA\Response(response="default", description="Welcome page")
-     * )
      *
      * @OA\Server(
      *      url=L5_SWAGGER_CONST_HOST,
      *      description="Demo API Server"
      * )
      *
-     * @OA\Tag(
-     *     name="Projects",
-     *     description="API Endpoints of Projects"
-     * )
      */
 class Controller extends BaseController
 {
